<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_resumen"
        android:title="@string/resumen"
        android:color="@color/colorWhite"
        android:state_checked="true"
        app:showAsAction="always|withText"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_24dp" />

    <item
        android:id="@+id/navigation_ordenes"
        android:title="@string/ordenes"
        android:color="@color/colorWhite"
        android:state_checked="true"
        app:showAsAction="always|withText"
        android:enabled="true"
        android:icon="@drawable/ic_library_books_black_24dp"
        />

    <item
        android:id="@+id/navigation_consultar_clientes"
        android:title="@string/consultar_clientes"
        android:color="@color/colorWhite"
        android:state_checked="true"
        app:showAsAction="ifRoom|withText"
        android:enabled="true"
        android:icon="@drawable/ic_assignment_ind_black_24dp"
        />

    <item
        android:id="@+id/navigation_productos"
        android:title="@string/productos"
        android:color="@color/colorWhite"
        android:state_checked="true"
        app:showAsAction="ifRoom|withText"
        android:enabled="true"
        android:icon="@drawable/ic_local_shipping_black_24dp"

        />

</menu>