<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ado.edu.pucmm.rancherasystem.Productos">

    <Button
        android:id="@+id/bttn_Resumen"
        android:layout_width="102dp"
        android:layout_height="51dp"
        android:layout_marginTop="667dp"
        android:background="@color/white"
        android:onClick="ToastTBD"
        android:text="@string/resumen"
        android:textColor="@color/DefaultBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bttn_Ordenes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


    <Button
        android:id="@+id/bttn_Ordenes"
        android:layout_width="90dp"
        android:layout_height="51dp"
        android:layout_marginTop="666dp"
        android:background="@color/DefaultBlue"
        android:onClick="ToastTBD"
        android:text="@string/ordenes"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bttn_CC"
        app:layout_constraintStart_toEndOf="@+id/bttn_Resumen"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/bttn_CC"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="120dp"
        android:layout_height="51dp"
        android:layout_marginTop="683dp"
        android:background="@color/DefaultBlue"
        android:onClick="ToastTBD"
        android:text="@string/consultar_clientes"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bttn_Prod"
        app:layout_constraintStart_toEndOf="@+id/bttn_Ordenes"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/bttn_Prod"
        android:layout_width="120dp"
        android:layout_height="51dp"
        android:layout_marginTop="264dp"
        android:background="@color/DefaultBlue"
        android:onClick="ToastTBD"
        android:text="@string/productos"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bttn_CC"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0" />


</android.support.constraint.ConstraintLayout>